# pdfdeal

./: .gitignore  LICENSE  README.md  README_CN.md  conftest.py  pyproject.toml
.github/workflows/: codeql.yml  python-publish.yml  python-test-linux.yml  python-test-mac.yml  python-test-win.yml  python-test.yml
docs/: doc2x.md  doc2x_cn.md  doc2x_old.md  doc2x_old_cn.md
examples/: convert_folder_pdfs.py  convert_pdfs_multiple_types.py  convert_single_pdf.py
pdfdeal/: _init_.py  file_tools.py  get_file.py
src/pdfdeal/: __init__.py  doc2x.py  doc2x_legacy.py  file_tools.py  get_file.py
src/pdfdeal/CLI/: doc2x.py
src/pdfdeal/Doc2X/: Convert.py  ConvertV1.py  ConvertV2.py  Exception.py  Pages.py  Types.py
src/pdfdeal/FileTools/: dealmd.py  dealpdfs.py  extract_img.py  file_tools.py  html2md.py  ocr.py  tool.py
src/pdfdeal/FileTools/Img/: Ali_OSS.py  MinIO.py  PicGO.py  S3.py
src/pdfdeal/FileTools/OCR/: doc2x.py  easyocr.py  passocr.py  pytesseract.py
src/pdfdeal/FileTools/Tool/: doc2x.py
src/pdfdeal/MarkerPDF/: converter.py  markerPDF.py  rate_limiter.py  uploaders.py
src/pdfdeal/Watch/: config.py  connect.py  i18n.py  store.py  words.py  work.py
src/pdfdeal/Watch/Connect/: local.py
tests/: test_client.py  test_pdf2file.py  test_pdfdeal.py  test_pic2file.py
tests/markdown/: test.md
