[project]
name = "pdfdeal"
version = "0.1.3"
authors = [{ name = "Menghuan1918", email = "menghuan@menghuan1918.com" }]
description = "Easier to deal with PDF, extract readable text and OCR to recognise image text and clean the format. Make it more suitable for knowledge base construction. Best performance with Doc2X."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "emoji",
    "pypdf",
    "Pillow",
    "reportlab",
    "httpx",
    "pytest",
]

[project.optional-dependencies]
all = ["pytesseract", "easyocr"]
pytesseract = ["pytesseract"]
easyocr = ["easyocr"]

[project.urls]
Homepage = "https://github.com/Menghuan1918/pdfdeal"
Issues = "https://github.com/Menghuan1918/pdfdeal/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pdfdeal"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
